[gd_scene load_steps=5 format=3 uid="uid://dwhjocicbhr6l"]

[ext_resource type="PackedScene" uid="uid://dlhuxgpsfcpjv" path="res://scenes/prefabs/picocar.tscn" id="1_px8oc"]
[ext_resource type="Script" path="res://scripts/picocar.gd" id="2_tkctv"]
[ext_resource type="PackedScene" uid="uid://cvjhli7dx452m" path="res://scenes/prefabs/engine_noise.tscn" id="3_isegw"]
[ext_resource type="Script" path="res://scripts/components/parkable_component.gd" id="4_yqje7"]

[node name="picocar" node_paths=PackedStringArray("wheel_front_right", "wheel_front_left", "wheel_back_right", "wheel_back_left") instance=ExtResource("1_px8oc")]
script = ExtResource("2_tkctv")
wheel_front_right = NodePath("wheel_fr")
wheel_front_left = NodePath("wheel_fl")
wheel_back_right = NodePath("wheel_br")
wheel_back_left = NodePath("wheel_bl")

[node name="engine_noise" parent="." index="6" instance=ExtResource("3_isegw")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.529911, 0.802172)

[node name="ParkableComponent" type="Node3D" parent="." index="7"]
script = ExtResource("4_yqje7")

[node name="headlight_l" type="SpotLight3D" parent="." index="8"]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, 0.456, 0.64, 1.178)
light_color = Color(0.913725, 0.713726, 0.266667, 1)
light_energy = 5.0
light_volumetric_fog_energy = 2.0
shadow_enabled = true
shadow_bias = 0.535
distance_fade_enabled = true

[node name="headlight_r" type="SpotLight3D" parent="." index="9"]
transform = Transform3D(-1, 0, 8.9407e-08, 0, 1, 0, -8.9407e-08, 0, -1, -0.456, 0.64, 1.178)
light_color = Color(0.913725, 0.713726, 0.266667, 1)
light_energy = 5.0
light_volumetric_fog_energy = 2.0
shadow_enabled = true
shadow_bias = 0.535
distance_fade_enabled = true

[node name="brakelight_r" type="OmniLight3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.427378, 0.573413, -1.30698)
light_color = Color(1, 0, 0, 1)
light_energy = 0.1
shadow_enabled = true

[node name="brakelight_l" type="OmniLight3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.427, 0.573458, -1.30678)
light_color = Color(1, 0, 0, 1)
light_energy = 0.1
shadow_enabled = true

[connection signal="parked_status_changed" from="." to="ParkableComponent" method="set_is_parked"]
